# github-sdv-poc-msp-data-collector

./: .gitmodules  CMakeLists.txt  package.xml  pyproject.toml
buildspec/: unit-test.yaml
dcol/: .clang-format  CMakeLists.txt
dcol/include/dcol/: app.hpp  context.hpp  extractors.hpp  scheduler.hpp
dcol/src/: app.cpp  extractors.cpp  scheduler.cpp
dcol/test/unit/: CMakeLists.txt  extractors.tst.cpp
include/dcol/: app.hpp  event_scheduler.hpp  extractors.hpp  fs.hpp  scheduler.hpp  scoped_handle.hpp
src/: app.cpp  event_scheduler.cpp  extractors.cpp  main.cpp  scheduler.cpp
test/integration/: test_integration.py
test/integration/src/: base_client.py  logger.py
test/integration/src/clients/aws/: aws_cli_client.py
test/integration/src/config/converters/: base_converter.py
test/integration/src/providers/configs/dc/: main_config.json
test/unit/: CMakeLists.txt  extractors.tst.cpp
tests/: conftest.py  data-collector-config.yaml
tests/data/: test_cases_data.py
tests/data/workbench/sdv/: req00001_aca1.yaml
tests/data_collector_tests/: test_dc_component.py  test_dc_integration.py
tests/integration/: requirements.txt
tests/integration/docker_volumes/aws/configs/: main_config.json
tests/integration/docker_volumes/dc/configs/: main_config.json
tests/integration/src/clients/docker/: base_docker_client.py
tests/integration/src/clients/docker/aws_client/: aws_client.py
tests/integration/src/clients/docker/data_collector/: dc_client.py
tests/integration/src/config/: config.py
tests/integration/src/config/providers/: config_from_env_provider.py
tests/integration/src/helpers/: helpers.py
tests/integration/src/providers/configs/aws/: config_aws_service_provider.py  main_config.json
tests/integration/src/providers/configs/dc/: config_dc_service_provider.py
tests/unit/: event_scheduler.tst.cpp  extractors.tst.cpp  main.tst.cpp
